# CryptoTrackerAfter

./: README.md
CryptoTracker/: app.py  pyproject.toml  replit.nix
CryptoTracker/assets/: style.css
CryptoTracker/attached_assets/: Pasted--class-RemedialAI-def-init-self-Initialize-TF-IDF-vectorizer-and-KMeans-cluster-1740388622329.txt  Pasted--crypto-sim-py-import-pandas-as-pd-import-yfinance-as-yf-import-nltk-import-requests-import-hashli-1740387148239.txt  Pasted--def-init-self-db-params-difficulty-2-self-chain-self-create-genesis-block--1740388669898.txt  Pasted-Possible-Causes-and-Solutions-TensorFlow-Version-Incompatibility-Older-TensorFlow-versions-might-h-1740388045534.txt  Pasted-TypeError-Unable-to-convert-function-return-value-to-a-Python-type-The-signature-was-handle--1740387991360.txt  Pasted-def-init-self-index-previous-hash-transactions-nonce-0-timestamp-None-self-index--1740388745448.txt
CryptoTracker/components/: charts.py  dashboard.py  model_config.py  risk_analysis.py  security_monitor.py
CryptoTracker/crypto_sim/: __init__.py  blockchain.py  models.py
CryptoTracker/pages/: economic.py  financial.py  security.py
CryptoTracker/styles/: style.css
CryptoTracker/utils/: data_loader.py  theme.py  visualization.py
